# world-cup-2026-odds-model

./: --help  .gitignore  2026世界杯_回测与改进建议_到6月21日.md  2026世界杯_回测与改进建议_到6月23日.md  2026世界杯_回测与改进建议_到6月24日.md  2026世界杯_回测与改进建议_到6月25日.md  2026世界杯_回测与改进建议_到6月26日.md  2026世界杯_回测与改进建议_到6月27日.md  2026世界杯_回测与改进建议_到6月28日.md  2026世界杯_回测与改进建议_到6月29日.md  2026世界杯_回测与改进建议_到6月30日.md  2026世界杯_回测与改进建议_到7月10日.md  2026世界杯_回测与改进建议_到7月11日.md  2026世界杯_回测与改进建议_到7月12日.md  2026世界杯_回测与改进建议_到7月13日.md  2026世界杯_回测与改进建议_到7月14日.md  2026世界杯_回测与改进建议_到7月15日.md  2026世界杯_回测与改进建议_到7月16日.md  2026世界杯_回测与改进建议_到7月17日.md  2026世界杯_回测与改进建议_到7月18日.md  2026世界杯_回测与改进建议_到7月19日.md  2026世界杯_回测与改进建议_到7月1日.md  2026世界杯_回测与改进建议_到7月20日.md  2026世界杯_回测与改进建议_到7月2日.md  2026世界杯_回测与改进建议_到7月3日.md  2026世界杯_回测与改进建议_到7月4日.md  2026世界杯_回测与改进建议_到7月5日.md  2026世界杯_回测与改进建议_到7月6日.md  2026世界杯_回测与改进建议_到7月7日.md  2026世界杯_回测与改进建议_到7月8日.md  2026世界杯_回测与改进建议_到7月9日.md  2026世界杯_复盘_到6月20日.md  AGENTS.md  AUTOMATION_RUNBOOK.md  CHANGELOG_v33.md  CHANGELOG_v35.md  CHANGELOG_v36.md  FINAL_F104_西班牙_阿根廷_最终分析报告.md  INSTALL_SKILL.en.md  INSTALL_SKILL.md  (+101 more)
.claude/: settings.local.json
archive/: README.md  backtest_44.py  backtest_compare_v32_v33.py  backtest_compare_v32_v34.py  backtest_full_40.py  backtest_v3.py  backtest_v34_48.py  backtest_v34_probe.py  current_form_elo.json  verify_fixes.py  wdl_backtest_v31.py
evidence/: 3p103_20260718T181207Z.final.json  context_f104_20260719T162917Z.csv  context_f104_20260719T162917Z.json  elo_3p103_20260718T180556Z_receipt.json  elo_3p103_20260718T2028Z_receipt.json  elo_3p_france_england_user_20260718T1538Z_receipt.json  (+53 more)
(+37 files in other folders)
